AP-23812: amendment of previous commit (after 1st code review, to be squashed)
AP-23812 (Move MountTable to new org.knime.core.workbench plug-in
(retire workbench code))